2007-09-23  Bruno coudoin  <bruno.coudoin@free.fr>

	- MAJOR FIX by Hans de Goede: the focus IS now given to GCompris when in fullscreen
	  with xvidmode.
	* src/gcompris/gcompris.c: (gc_fullscreen_set), (main):

2007-09-22  Bruno coudoin  <bruno.coudoin@free.fr>

	- Added Breton sounds created by Alan Monfort free fr and Victoire.
	* boards/voices/br/*

	- MAJOR FIX: the focus was not given to GCompris when in fullscreen
	  with xvidmode.
	* src/gcompris/gcompris.c (gc_fullscreen_set):
 	  removed call to gdk_window_set_override_redirect

2007-09-14  Bruno coudoin  <bruno.coudoin@free.fr>

	Fixed web site generation, improved it's documentation

	* docs/spip_oneboard.xsl:
	* docs/gcompris2spip.pl:

	- Removed require on gtk-pixbuf as it's already required by GTK.

2007-09-13  Bruno coudoin  <bruno.coudoin@free.fr>

	- Patch by Hans de Goede j w r degoede hhs nl
	  concerning the xvidmode fullscreen to support latest change in gnome

	* src/gcompris/gcompris.c: (gc_fullscreen_set):

2007-09-12  Bruno coudoin  <bruno.coudoin@free.fr>

	- revove this method to create shape game activity as
	the one in tools/gcompris_shapegame.py that is a gimp script
	is much easier to use.

	* tools/shapegame/HOWTO:
	* tools/shapegame/Makefile:
	* tools/shapegame/dt/Makefile:
	* tools/shapegame/dt/README:
	* tools/shapegame/dt/dt.cpp:
	* tools/shapegame/dt/dt.h:
	* tools/shapegame/dt/image.h:
	* tools/shapegame/dt/imconv.h:
	* tools/shapegame/dt/imutil.h:
	* tools/shapegame/dt/misc.h:
	* tools/shapegame/dt/pnmfile.h:
	* tools/shapegame/nice_target_spot.cpp:

2007-09-12  Bruno coudoin  <bruno.coudoin@free.fr>

	- Added support for Breton by Alan Monfort.

	* configure.in:
	* docs/gcompris2spip.pl:
	* po/ChangeLog:
	* po/br.po:
	* src/gcompris/config.c:

2007-09-10  Bruno coudoin  <bruno.coudoin@free.fr>

	- removed unmaitained spec file
	- fixed menu file not to include icon extension
	- fixed bug#475301 missing freetype includes to compile libgnomecanvas

	* configure.in: