@@ -85,8 +85,8 @@ lib_LTLIBRARIES = \
 
 libdir = $(plugindir)
 INCLUDES = \
-	-I$(top_srcdir)/src \
-	-I$(top_srcdir)/intl \
+	-I$(top_builddir)/src \
+	-I$(top_builddir)/intl \
 	$(GCOMPRIS_CFLAGS) \
 	$(XML_CFLAGS) \
 	$(PYTHON_CFLAGS) \
